# ferias

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  404.html  Dockerfile  HOWTO.md  HOWTO_Docker.md  MODELS.md  README.md  ROADMAP.md  SITEMAP.md  compose.dev.yml  compose.prod.yml  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  ferias.csv  ferias.geojson  index.html  manage.py  migrations.sh  mkdocs.yml  playground.ipynb  productos.json  productos.xlsx  pyproject.toml  requirements.txt
CMS/: index.html
api/: index.html  (+6 more)
web/: Dockerfile  docker-entrypoint.sh  first-deployment.sh  pyproject.toml
web/apps/api/: comb_schema_script.py
web/apps/blog/templates/: post.html
web/apps/cms_pages/: admin.py
web/apps/content/templates/: preparation.html
web/apps/crowdsourcing/: admin.py  urls.py
web/apps/crowdsourcing/templates/: revisiones_ferias.html  sugerencias.html  sugerencias_gracias.html  sugerencias_producto.html  sugerencias_productos.html
web/apps/feed/templates/: create_alert.html  news.html
web/apps/marketplaces/: models.py  views.py
web/apps/products/: urls.py
web/apps/products/fixtures/: products.json
web/apps/products/templates/: prices.html  product.html
web/apps/recipes/: forms.py  views.py
web/apps/recipes/templates/partials/: recipe_ingredient_form.html
web/apps/recipes/templatetags/: time_filters.py
web/apps/website/: admin.py  apps.py
web/apps/website/fixtures.bak/: fixture_student.py  website.json
web/apps/website/templates/: anuncios.html  contacto.html  cover.html  crear.html
web/ferias/: settings.py
(+310 files in other folders)
